--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev-watch-parcel": "delay 2 && cross-env NODE_ENV=development parcel watch frontend/js/index.js --out-dir dist/bundles",
     "dev-watch-server": "cross-env NODE_ENV=development nodemon --watch backend --ext js,liquid backend/index.js",
     "prod": "run-s prod-**",
-    "prod-parcel-build": "cross-env NODE_ENV=production parcel build frontend/js/index.js --out-dir dist/bundles --no-source-maps",
+    "prod-parcel-build": "cross-env NODE_ENV=production parcel build frontend/js/index.js --out-dir dist/bundles --no-source-maps --detailed-report",
     "prod-show-report": "cpy dist/bundles/report.html ./ && trash dist/bundles/report.html && open-cli ./report.html",
     "prod-test": "jest",
     "prod-lint": "eslint frontend/**/*.js backend/**/*.js"
@@ -24,7 +24,8 @@
     "internal-ip": "^5.0.0",
     "liquidjs": "^9.7.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "unstated-next": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
@@ -36,6 +37,8 @@
     "cpy-cli": "^3.0.0",
     "delay-cli": "^1.1.0",
     "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "jest": "^25.1.0",
     "ms.macro": "^2.0.0",
     "nodemon": "^2.0.2",
