--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "prod": "run-s prod-**",
     "prod-parcel-build": "cross-env NODE_ENV=production parcel build frontend/js/index.js --out-dir dist/bundles --no-source-maps --detailed-report",
     "prod-show-report": "cpy dist/bundles/report.html ./ && trash dist/bundles/report.html && open-cli ./report.html",
-    "prod-test": "jest",
-    "prod-lint": "eslint frontend/**/*.js backend/**/*.js"
+    "prod-type-check": "flow",
+    "prod-lint": "eslint frontend/**/*.js backend/**/*.js",
+    "prod-test": "jest"
   },
   "watchreload": {
     "files": "backend/**/*"
@@ -31,14 +32,17 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
+    "babel-eslint": "^10.0.3",
     "babel-plugin-inline-replace-variables": "^1.3.1",
     "babel-plugin-macros": "^2.8.0",
     "concurrently": "^5.1.0",
     "cpy-cli": "^3.0.0",
     "delay-cli": "^1.1.0",
     "eslint": "^6.8.0",
+    "eslint-plugin-flowtype": "^4.6.0",
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^2.3.0",
+    "flow-bin": "^0.118.0",
     "jest": "^25.1.0",
     "ms.macro": "^2.0.0",
     "nodemon": "^2.0.2",
