--- a/.flowconfig
+++ b/.flowconfig
@@ -6,7 +6,7 @@
 [lints]
 
 [options]
-suppress_comment= \\(.\\|\n\\)*\\@flow-ignore-line
+suppress_comment= \\(.\\|\n\\)*\\flow-ignore-next-line-all-rules
 esproposal.class_instance_fields=enable
 esproposal.class_static_fields=enable
 esproposal.optional_chaining=enable
