--- a/package.json
+++ b/package.json
@@ -1,74 +1,37 @@
 {
-  "name": "reddit-pictures-organiser",
+  "name": "example-app",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node backend/lib-js/index.js",
-    "install-flow-types": "flow-typed install",
-    "copy-assets": "cpy frontend/assets/**/* dist/assets",
-    "dev": "run-s copy-assets dev-watch",
-    "dev-watch": "concurrently npm:dev-watch-*",
-    "dev-watch-parcel": "cross-env NODE_ENV=development parcel watch frontend/js/index.js --out-dir dist/bundles",
-    "dev-watch-server": "delay 7 && cross-env NODE_ENV=development nodemon --exec \"babel-node --no-babelrc --presets=@babel/preset-flow\" --watch backend --ext js,liquid backend/src-js/index.js",
-    "prod": "run-s prod-**",
-    "prod-server-build": "cross-env NODE_ENV=production babel backend/src-js/ -d backend/lib-js/ --no-babelrc --presets=@babel/preset-flow",
-    "prod-parcel-build": "cross-env NODE_ENV=production parcel build frontend/js/index.js --out-dir dist/bundles --no-source-maps --detailed-report",
-    "prod-type-check": "flow",
-    "prod-lint": "eslint frontend/**/*.js backend/**/*.js --ignore-pattern backend/lib-js/**/*",
-    "prod-test": "jest",
-    "prod-bundle-report": "cpy dist/bundles/report.html ./reports && trash dist/bundles/report.html && open-cli ./reports/report.html",
-    "prod-flow-coverage": "flow-coverage-report -i 'backend/**/*.js' -i 'frontend/**/*.js' -t html --output-dir reports --exclude-glob backend/lib-js/**/* || true && open-cli ./reports/index.html"
+    "prepare": "snowpack --include \"frontend/**/*.js\" --dest frontend/js/web_modules",
+    "build": "run-s lint test minify-** size-check",
+    "lint": "eslint frontend/**/*.js backend/**/*.js",
+    "test": "jest",
+    "minify-vendor-js": "snowpack --include \"frontend/**/*.js\" --optimize --clean --dest frontend/js/web_modules",
+    "minify-frontend-js-css": "minify --recursive --output frontend frontend --match=\\.js --match=\\.css",
+    "size-check": "bundlesize -f \"frontend/**/*.js\" -s 20kB"
   },
   "dependencies": {
-    "cross-env": "^7.0.0",
-    "express": "^4.17.1",
-    "internal-ip": "^5.0.0",
-    "liquidjs": "^9.7.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "unstated-next": "^1.1.0"
+    "sinuous": "^0.24.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.4",
-    "@babel/node": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/preset-flow": "^7.8.3",
-    "@babel/preset-react": "^7.8.3",
-    "@cumulusds/flow-coverage-report": "0.0.3",
-    "babel-eslint": "^10.0.3",
-    "babel-plugin-inline-replace-variables": "^1.3.1",
-    "babel-plugin-macros": "^2.8.0",
-    "concurrently": "^5.1.0",
-    "cpy-cli": "^3.0.0",
-    "delay-cli": "^1.1.0",
+    "bundlesize": "^0.18.0",
     "eslint": "^6.8.0",
-    "eslint-plugin-flowtype": "^4.6.0",
-    "eslint-plugin-react": "^7.18.3",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "flow-bin": "^0.118.0",
-    "flow-typed": "^2.6.2",
     "jest": "^25.1.0",
-    "ms.macro": "^2.0.0",
-    "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
-    "open-cli": "^5.0.0",
-    "param.macro": "^3.2.1",
-    "parcel-bundler": "^1.12.4",
-    "parcel-plugin-bundle-visualiser": "^1.2.0",
-    "parcel-plugin-nuke-dist": "^1.0.1",
-    "trash-cli": "^3.0.0"
+    "snowpack": "^1.2.0"
   },
+  "browserslist": "last 3 Chrome version, Firefox ESR",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Darkle/Reddit-Pictures-Organiser.git"
+    "url": "git+https://github.com/Darkle/simple-no-bundling-js-backend-frontend-boilerplate.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Darkle/Reddit-Pictures-Organiser/issues"
+    "url": "https://github.com/Darkle/simple-no-bundling-js-backend-frontend-boilerplate/issues"
   },
-  "homepage": "https://github.com/Darkle/Reddit-Pictures-Organiser#readme"
+  "homepage": "https://github.com/Darkle/simple-no-bundling-js-backend-frontend-boilerplate#readme"
 }
