--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example-app",
+  "name": "reddit-pictures-organiser",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
