--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prepare": "snowpack --include \"js/**/*.js\" --dest js/web_modules",
-    "dev": "reload --watch-dir js --dir js --port 8888",
+    "dev": "browser-sync --server --port 8888 --watch --no-open",
     "build": "run-s lint test minify-** size-check",
     "lint": "eslint js/**/*.js",
     "test": "jest",
@@ -19,11 +19,12 @@
     "yo-yo": "^1.4.1"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
+    "browser-sync": "^2.26.7",
     "bundlesize": "^0.18.0",
     "eslint": "^6.8.0",
     "jest": "^25.1.0",
     "npm-run-all": "^4.1.5",
-    "reload": "^3.0.4",
     "snowpack": "^1.2.0"
   },
   "browserslist": "last 3 Chrome version, Firefox ESR",
