--- a/package.json
+++ b/package.json
@@ -4,43 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development parcel src/html/index.html --port 8888",
-    "prod": "run-s prod-**",
-    "prod-copy-assets": "cpy assets/**/* dist/assets",
-    "prod-copy-html": "cpy index.html dist/index.html",
-    "prod-copy-css": "cpy css/**/* dist/css",
-    "prod-parcel-build": "cross-env NODE_ENV=production parcel build js/index.js --out-dir dist/js --no-source-maps --detailed-report",
-    "prod-lint": "eslint src/js/**/*.js",
-    "prod-test": "jest",
-    "prod-minify-css": "minify --recursive --output dist/css dist/css --match=\\.css",
-    "prod-bundle-report": "cpy dist/js/report.html ./reports && trash dist/bundles/report.html && open-cli ./reports/report.html"
+    "prepare": "snowpack --include \"js/**/*.js\" --dest js/web_modules",
+    "dev": "browser-sync --server --port 8888 --watch --no-open",
+    "build": "run-s lint test minify-** size-check",
+    "lint": "eslint js/**/*.js",
+    "test": "jest",
+    "minify-vendor-js": "snowpack --include \"js/web_modules/**/*.js\" --optimize --clean --dest js/web_modules",
+    "minify-frontend-js-css": "minify --recursive --output js js --match=\\.js --match=\\.css",
+    "size-check": "bundlesize -f \"js/**/*.js\" -s 20kB"
   },
   "dependencies": {
     "localforage": "^1.7.3",
-    "main.css": "^2.0.0",
     "nanoevents": "^4.0.0",
     "navigo": "^7.1.2",
     "yo-yo": "^1.4.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
+    "browser-sync": "^2.26.7",
     "bundlesize": "^0.18.0",
-    "cpy-cli": "^3.1.0",
-    "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
-    "eslint-plugin-functional": "^3.0.1",
     "jest": "^25.1.0",
-    "ms.macro": "^2.0.0",
     "npm-run-all": "^4.1.5",
-    "open-cli": "^5.0.0",
-    "param.macro": "^3.2.1",
-    "parcel-bundler": "^1.12.4",
-    "parcel-plugin-bundle-visualiser": "^1.2.0",
-    "parcel-plugin-nuke-dist": "^1.0.1",
-    "parcel-plugin-svelte": "^4.0.6",
-    "snowpack": "^1.2.0",
-    "svelte": "^3.19.2",
-    "trash-cli": "^3.0.0"
+    "snowpack": "^1.2.0"
   },
   "browserslist": "last 3 Chrome version, Firefox ESR",
   "repository": {
