Revert "Set up lightscript"
This reverts commit 2512919276d4829f3155295779aabca417331e92.

--- a/package.json
+++ b/package.json
@@ -5,58 +5,32 @@
   "main": "index.js",
   "scripts": {
     "prepare": "snowpack --include \"src/js/**/*.js\" --dest src/js/web_modules",
-    "dev": "run-s clean-dist copy-assets && concurrently npm:dev-watch-*",
-    "dev-watch-js": "cross-env NODE_ENV=development babel -x .lsc,.lsx src/js --out-dir dist/js --source-maps --watch --ignore \"src/js/web_modules/*.js\",\"src/js/web_modules/**/*\"",
-    "dev-watch-css": "cpx \"src/css/*.css\" dist/css --watch",
-    "dev-watch-html": "cpx \"src/index.html\" dist --watch",
-    "dev-watch-vendor-js": "cpx \"src/js/web_modules/**/*\" \"dist/js/web_modules/\" --watch",
-    "dev-watch-server": "delay 2 && cd dist && browser-sync --server --port 8888 --watch --no-open",    
-    "prod": "run-s eslint test clean-dist prod-**",
-    "prod-js": "cross-env NODE_ENV=production babel -x .lsc,.lsx src/js --out-dir dist/js --ignore \"src/js/web_modules/*.js\",\"src/js/web_modules/**/*\"",
-    "prod-vendor-js": "snowpack --include \"src/js/web_modules/**/*.js\" --optimize --clean --dest src/js/web_modules",
-    "prod-copy-css-to-dist": "cpx \"src/css/*.css\" dist/css",
-    "prod-copy-html-to-dist": "cpx \"src/index.html\" dist",
-    "prod-copy-assets-to-dist": "cpx \"frontend/assets/**/*\" dist/assets",
-    "prod-copy-vendor-js-to-dist": "cpx \"src/js/web_modules/**/*\" \"dist/js/web_modules/\"",
-    "prod-minify-js-css-html": "minify --recursive --output dist dist",
-    "prod-size-check": "bundlesize -f \"dist/js/**/*.js\" -s 20kB",
-    "clean-dist": "trash dist/**/*",
-    "copy-assets": "cpx \"frontend/assets/**/*\" dist/assets",
+    "dev": "cd src && browser-sync --server --port 8888 --watch --no-open",
+    "build": "run-s eslint test copy-to-dist minify-** size-check",
+    "eslint": "eslint src/js/**/*.js",
     "test": "jest",
-    "eslint": "eslint src/js/**/*.lsc"
+    "copy-to-dist": "ncp src dist",
+    "minify-vendor-js": "snowpack --include \"dist/js/web_modules/**/*.js\" --optimize --clean --dest dist/js/web_modules",
+    "minify-js-css-html": "minify --recursive --output dist dist",
+    "size-check": "bundlesize -f \"dist/js/**/*.js\" -s 20kB"
   },
   "dependencies": {
     "localforage": "^1.7.3",
     "navigo": "^7.1.2",
-    "p-times": "^2.1.0",
     "plain-object-is-empty": "^1.0.0",
     "store": "npm:@fabiospampinato/store@^1.1.1",
     "superfine": "^7.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.7",
-    "@babel/core": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
-    "@lightscript/babel-preset": "4.0.0-alpha.25",
-    "@lightscript/eslint-plugin": "^4.0.0-alpha.25",
-    "babel-jest": "^25.1.0",
-    "babel-plugin-inline-replace-variables": "^1.3.1",
-    "babel-plugin-macros": "^2.8.0",
-    "babel-plugin-transform-rename-import": "^2.3.0",
+    "babel-eslint": "^10.0.3",
     "browser-sync": "^2.26.7",
     "bundlesize": "^0.18.0",
-    "concurrently": "^5.1.0",
-    "cpx2": "^2.0.0",
-    "cross-env": "^7.0.2",
-    "delay-cli": "^1.1.0",
-    "eslint": "^5.16.0",
+    "eslint": "^6.8.0",
     "eslint-plugin-functional": "^3.0.1",
     "jest": "^25.1.0",
-    "ms.macro": "^2.0.0",
+    "ncp": "^2.0.0",
     "npm-run-all": "^4.1.5",
-    "param.macro": "^3.2.1",
-    "snowpack": "^1.2.0",
-    "trash-cli": "^3.0.0"
+    "snowpack": "^1.2.0"
   },
   "repository": {
     "type": "git",
