Fixed fetchSubImages so that it no longer needs to store state. Fixed minify-vendor-js in package.json. Abstracted the get images and patch html into a function in subredditPage.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "eslint": "eslint src/js/**/*.js",
     "test": "jest",
     "copy-to-dist": "ncp src dist",
-    "minify-vendor-js": "snowpack --include \"dist/js/web_modules/**/*.js\" --optimize --clean --dest dist/js/web_modules",
+    "minify-vendor-js": "snowpack --include \"src/js/**/*.js\" --optimize --clean --dest dist/js/web_modules",
     "minify-js-css-html": "minify --recursive --output dist dist",
     "size-check": "bundlesize -f \"dist/js/**/*.js\" -s 20kB"
   },
