--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "eslint": "eslint src/js/**/*.js",
     "test": "jest",
     "copy-to-dist": "ncp src dist",
-    "minify-vendor-js": "snowpack --include \"src/js/**/*.js\" --optimize --clean --dest dist/js/web_modules",
+    "minify-vendor-js": "snowpack --include \"src/js/**/*.js\" --optimize --clean --stat --dest dist/js/web_modules",
     "minify-js-css-html": "minify --recursive --output dist dist",
     "size-check": "bundlesize -f \"dist/js/**/*.js\" -s 20kB"
   },
@@ -31,7 +31,7 @@
     "jest": "^25.1.0",
     "ncp": "^2.0.0",
     "npm-run-all": "^4.1.5",
-    "snowpack": "^1.2.0"
+    "snowpack": "^1.6.0"
   },
   "repository": {
     "type": "git",
