--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "htm": "^3.0.3",
     "localforage": "^1.7.3",
     "navigo": "^7.1.2",
+    "p-limit": "^2.2.2",
     "store": "npm:@fabiospampinato/store@^1.1.3",
     "superfine": "^7.0.0"
   },
