--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "navigo": "^7.1.2",
     "p-limit": "^2.2.2",
     "store": "npm:@fabiospampinato/store@^1.1.3",
-    "superfine": "^7.0.0"
+    "superfine": "^7.0.0",
+    "tocca": "^2.0.9"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
