--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "p-limit": "^2.2.2",
     "store": "npm:@fabiospampinato/store@^1.1.3",
     "superfine": "^7.0.0",
-    "tocca": "^2.0.9"
+    "swiper": "^5.3.6"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
