--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bundlesize": "^0.18.0",
     "eslint": "^6.8.0",
     "eslint-plugin-functional": "^3.0.1",
+    "eslint-plugin-lit": "^1.2.0",
     "jest": "^25.1.0",
     "ncp": "^2.0.0",
     "npm-run-all": "^4.1.5",
