--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "npm-run-all": "^4.1.5",
     "snowpack": "^1.6.0"
   },
+  "browserslist": "last 3 Chrome version, firefox esr",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Darkle/simple-no-bundling-js-backend-frontend-boilerplate.git"
