--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "size-check": "bundlesize -f \"dist/js/**/*.js\" -s 20kB"
   },
   "dependencies": {
-    "croppr": "^2.3.1",
+    "js-cropper": "^1.0.1",
     "lit-html": "^1.2.1",
     "localforage": "^1.7.3",
     "navigo": "^7.1.2",
@@ -34,7 +34,7 @@
     "npm-run-all": "^4.1.5",
     "snowpack": "^1.6.0"
   },
-  "browserslist": "last 3 Chrome version, firefox esr",
+  "browserslist": "last 3 Chrome version, Firefox ESR",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Darkle/simple-no-bundling-js-backend-frontend-boilerplate.git"
