Working on draggie

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "size-check": "bundlesize -f \"dist/js/**/*.js\" -s 20kB"
   },
   "dependencies": {
+    "draggabilly": "^2.2.0",
     "lit-html": "^1.2.1",
     "localforage": "^1.7.3",
     "navigo": "^7.1.2",
