--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "prepare": "snowpack --include \"src/js/**/*.js\" --dest src/js/web_modules",
     "dev": "cd src && browser-sync --server --port 8888 --watch --no-open --no-notify --https",
-    "build": "run-s eslint test copy-to-dist minify-** size-check",
-    "eslint": "eslint src/js/**/*.js",
-    "test": "jest",
-    "copy-to-dist": "ncp src dist",
-    "minify-vendor-js": "snowpack --include \"src/js/**/*.js\" --optimize --clean --stat --dest dist/js/web_modules",
-    "minify-js-css-html": "minify --recursive --output dist dist",
-    "size-check": "bundlesize -f \"dist/js/**/*.js\" -s 20kB"
+    "build": "run-s build-**",
+    "build-eslint": "eslint src/js/**/*.js",
+    "build-test": "jest",
+    "build-copy-to-dist": "ncp src dist",
+    "build-snowpack": "snowpack --include \"src/js/**/*.js\" --optimize --no-source-map --clean --stat --dest dist/js/web_modules",
+    "build-minify": "minify --recursive --output dist dist",
+    "build-vendor-size-check": "chalk blue bold 'Vendor Libs Size Check:\n\n' && bundlesize -f \"dist/js/web_modules/**/*.js\" -s 35kB",
+    "build-total-size-check": "ncat 'dist/**/*.js' -o ./total-bundle.js > /dev/null 2>&1 && chalk blue bold 'Total JS Size Check:\n\n' && bundlesize -f ./total-bundle.js -s 100kB",
+    "build-lighthouse": "lighthouse https://192.168.1.2:8888 --chrome-flags='--ignore-certificate-errors' --view --output-path ./lighthouse-report.html"
   },
   "dependencies": {
     "draggabilly": "^2.2.0",
@@ -26,13 +28,18 @@
     "babel-eslint": "^10.0.3",
     "browser-sync": "^2.26.7",
     "bundlesize": "^0.18.0",
+    "chalk-cli": "^4.1.0",
+    "concat-cli": "^4.0.0",
     "eslint": "^6.8.0",
     "eslint-plugin-functional": "^3.0.1",
     "eslint-plugin-lit": "^1.2.0",
     "jest": "^25.1.0",
+    "lighthouse": "^5.6.0",
+    "ncat": "^4.0.2",
     "ncp": "^2.0.0",
     "npm-run-all": "^4.1.5",
-    "snowpack": "^1.6.0"
+    "snowpack": "^1.6.0",
+    "trash-cli": "^3.0.0"
   },
   "browserslist": "last 3 Chrome version, Firefox ESR",
   "repository": {
