--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "build-snowpack": "snowpack --include \"src/js/**/*.js\" --optimize --no-source-map --clean --stat --dest dist/js/web_modules",
     "build-minify": "minify --recursive --output dist dist",
     "build-vendor-size-check": "chalk blue bold 'Vendor Libs Size Check:\n\n' && bundlesize -f \"dist/js/web_modules/**/*.js\" -s 35kB",
-    "build-total-size-check": "ncat 'dist/**/*.js' -o ./total-bundle.js > /dev/null 2>&1 && chalk blue bold 'Total JS Size Check:\n\n' && bundlesize -f ./total-bundle.js -s 100kB",
-    "build-lighthouse": "lighthouse https://192.168.1.2:8888 --chrome-flags='--ignore-certificate-errors' --view --output-path ./lighthouse-report.html"
+    "build-total-size-check": "ncat 'dist/**/*.js' -o ./total-bundle.js > /dev/null && chalk blue bold 'Total JS Size Check:\n\n' && bundlesize -f ./total-bundle.js -s 70kB && trash ./total-bundle.js",
+    "build-lighthouse": "lighthouse https://192.168.1.2:8888 --chrome-flags='--ignore-certificate-errors' --view --output-path ./lighthouse-report.html && trash ./lighthouse-report.html"
   },
   "dependencies": {
     "draggabilly": "^2.2.0",
