--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "prepare": "snowpack --include \"src/js/**/*.js\" --dest src/js/web_modules",
     "dev": "cd src && browser-sync --server --port 8888 --watch --no-open --no-notify --https",
     "build": "run-s build:**",
-    "build-eslint": "eslint src/js/**/*.js",
-    "build-test": "jest",
+    "build:eslint": "eslint src/js/**/*.js",
+    "build:test": "jest",
     "build:copy-to-dist": "ncp src dist",
     "build:serve": "cd dist && browser-sync --server --port 8888 --no-notify --no-open --https &",
     "build:snowpack": "snowpack --include \"src/js/**/*.js\" --optimize --no-source-map --clean --stat --dest dist/js/web_modules",
@@ -34,7 +34,6 @@
     "browser-sync": "^2.26.7",
     "bundlesize": "^0.18.0",
     "chalk-cli": "^4.1.0",
-    "concat-cli": "^4.0.0",
     "eslint": "^6.8.0",
     "eslint-plugin-functional": "^3.0.1",
     "eslint-plugin-lit": "^1.2.0",
