--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "scripts": {
     "prepare": "snowpack --include \"src/js/**/*.js\" --dest src/js/web_modules",
-    "dev": "cd src && browser-sync --server --port 8888 --watch --no-open --no-notify --https",
+    "dev": "cd src && browser-sync --server --port 8888 --watch --no-open --no-ghost-mode --no-notify --no-ui --https",
     "build": "run-s build:**",
     "build:eslint": "eslint src/js/**/*.js",
     "build:test": "jest",
     "build:copy-to-dist": "ncp src dist",
-    "build:serve": "cd dist && browser-sync --server --port 8888 --no-notify --no-open --https &",
+    "build:serve": "cd dist && browser-sync --server --port 8888 --no-notify --no-ghost-mode --no-open --no-ui --https &",
     "build:snowpack": "snowpack --include \"src/js/**/*.js\" --optimize --no-source-map --clean --stat --dest dist/js/web_modules",
     "build:minify": "minify --recursive --output dist dist",
     "build:vendor-size-check": "chalk blue bold 'Vendor Libs Size Check:\n\n' && bundlesize -f \"dist/js/web_modules/**/*.js\" -s 35kB",
