--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "prepare": "snowpack --include \"src/js/**/*.js\" --dest src/js/web_modules",
     "dev": "cd src && browser-sync --server --port 8888 --watch --no-open --no-ghost-mode --no-notify --no-ui --https",
     "build": "run-s build:**",
-    "build:eslint": "eslint src/js/**/*.js",
-    "build:test": "jest",
+    "build:eslint": "eslint src/js/**/*.js --ignore-pattern src/js/web_modules/**/*.js --quiet",
     "build:copy-to-dist": "ncp src dist",
     "build:serve": "cd dist && browser-sync --server --port 8888 --no-notify --no-ghost-mode --no-open --no-ui --https &",
     "build:snowpack": "snowpack --include \"src/js/**/*.js\" --optimize --no-source-map --clean --stat --dest dist/js/web_modules",
@@ -34,7 +33,6 @@
     "eslint-plugin-functional": "^3.0.1",
     "eslint-plugin-lit": "^1.2.0",
     "fkill-cli": "^6.0.1",
-    "jest": "^25.1.0",
     "lighthouse": "^5.6.0",
     "ncat": "^4.0.2",
     "ncp": "^2.0.0",
