Moved some if statements into functions.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build:vendor-size-check": "chalk blue bold 'Vendor Libs Size Check:\n\n' && bundlesize -f \"dist/js/web_modules/**/*.js\" -s 35kB",
     "build:total-size-check": "ncat 'dist/**/*.js' -o ./total-bundle.js > /dev/null && chalk blue bold 'Total JS Size Check:\n\n' && bundlesize -f ./total-bundle.js -s 70kB && trash ./total-bundle.js",
     "build:lighthouse": "lighthouse https://localhost:8888 --chrome-flags='--ignore-certificate-errors' --view --only-categories=accessibility,best-practices,performance,seo --quiet --output-path ./lighthouse-report.html && trash ./lighthouse-report.html",
-    "build:kill-serve": "fkill :8888"
+    "build:kill-serve": "fkill :8888",
+    "deploy": "surge dist reddit-pictures-organiser.surge.sh"
   },
   "dependencies": {
     "lit-html": "^1.2.1",
