--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "cd src && browser-sync --server --port 8888 --watch --no-open --no-ghost-mode --no-notify --no-ui --https",
     "build-only": "run-s build:copy-to-dist build:snowpack build:minify",
     "build": "run-s build:**",
-    "build:eslint": "eslint src/js/**/*.js --ignore-pattern src/js/web_modules/**/*.js --quiet",
+    "build:eslint": "eslint \"src/js/**/*.js\" --ignore-pattern \"src/js/web_modules/**/*.js\" --quiet",
     "build:copy-to-dist": "ncp src dist",
     "build:serve": "cd dist && browser-sync --server --port 8888 --no-notify --no-ghost-mode --no-open --no-ui --https &",
     "build:snowpack": "snowpack --include \"src/js/**/*.js\" --optimize --no-source-map --clean --stat --dest dist/js/web_modules",
@@ -20,6 +20,7 @@
     "deploy": "surge dist reddit-pictures-organiser.surge.sh"
   },
   "dependencies": {
+    "@airbrake/browser": "^1.0.6",
     "lit-html": "^1.2.1",
     "localforage": "^1.7.3",
     "navigo": "^7.1.2",
