--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prepare": "snowpack --include \"src/js/**/*.js\" --dest src/js/web_modules",
     "dev": "cd src && browser-sync --server --port 8888 --watch --no-open --no-ghost-mode --no-notify --no-ui --https",
     "build-only": "run-s build:copy-to-dist build:snowpack build:minify",
-    "netlify-build": "wget https://github.com/tdewolff/minify/releases/download/v2.7.3/minify_2.7.3_linux_amd64.tar.gz && tar -xf minify_2.7.3_linux_amd64.tar.gz && run-s build:copy-to-dist build:snowpack build:minify",
+    "netlify-build": "curl https://github.com/tdewolff/minify/releases/download/v2.7.3/minify_2.7.3_linux_amd64.tar.gz --output minify.tar.gz && tar -xf minify.tar.gz && run-s build:copy-to-dist build:snowpack build:minify",
     "build": "run-s build:**",
     "build:eslint": "eslint \"src/js/**/*.js\" --ignore-pattern \"src/js/web_modules/**/*.js\" --quiet",
     "build:copy-to-dist": "ncp src dist",
